[package]
name = "todo-cli"
version = "0.1.0"
authors = ["Dizans <dizansyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
prettytable-rs = "0.8.0"
anyhow = "*"
dirs = "2.0.2"
ansi_term = "0.12.1"
